Terms and conditions
Terms and conditions

--- a/src/app/landing-pages/landing-pages.component.html
+++ b/src/app/landing-pages/landing-pages.component.html
@@ -220,7 +220,14 @@
 
                         </div></a></li>
                 </ul>
+
+                <h6 class="footer-title mt-5">Quick Links</h6>
+                <ul class="list-unstyled">
+                    <li><a routerLink="/terms-and-conditions">Terms and Conditions</a></li>
+                </ul>
             </div>
+
+            
 
             <!-- Legal Section -->
             <div class="col-lg-3 col-md-3 col-12 footer-links text-md-start text-center">
